@@ -1074,3 +1074,4 @@
 
 [v1.1.2p14]
 - Bugfix: "Shrinking" big children of a ToolbarDockStation resulted in a NullPointerException
+- Bugfix: Various bugs that prevented a user from dragging a toolbar-item to the screen
